--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@apollo/server": "^4.9.2",
     "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^10.2.1",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.2.1",
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-express": "^10.0.0",
