--- a/package.json
+++ b/package.json
@@ -32,16 +32,20 @@
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/passport-jwt": "^3.0.9",
+    "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "subscriptions-transport-ws": "^0.11.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
