--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,13 @@
+version: '3'
 services:
-  postgres:
+  database:
     image: postgres
     environment:
-      POSTGRES_DATABASE: 'teste-backend-brainny'
-      POSTGRES_USERNAME: 'postgres'
-      POSTGRES_PASSWORD: 'postgres'
+      POSTGRES_DATABASE: $POSTGRES_DATABASE
+      POSTGRES_PORT: $POSTGRES_PORT
+      POSTGRES_USERNAME: $POSTGRES_USERNAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
     ports:
-      - '5432:5432'
+      - '${POSTGRES_PORT}:${POSTGRES_PORT}'
+  service:
+    build: .
