--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "node -r dotenv/config ./dist/database/seeders/seeder",
+    "seed:refresh": "node ./dist/seeder --refresh"
   },
   "dependencies": {
     "@apollo/server": "^4.9.2",
@@ -31,14 +33,17 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/faker": "^6.6.9",
     "@types/passport-jwt": "^3.0.9",
     "apollo-server-express": "^3.12.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "faker": "^6.6.6",
     "graphql": "^16.8.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.0",
+    "nestjs-seeder": "^0.3.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
