--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ POSTGRES_USERNAME='postgres'
 POSTGRES_PASSWORD='postgres'
 POSTGRES_PORT=5432
 
-JWT_SECRET=''
-JWT_EXPIRESIN=''
+JWT_SECRET='secret'
+JWT_EXPIRESIN='60m'
